--- a/.github/workflows/fetchAll.yaml
+++ b/.github/workflows/fetchAll.yaml
@@ -8,20 +8,63 @@ on:
     - cron:  '* * 1 * *'
 
 jobs:
-  build:
+  fetchYears:
     runs-on: ubuntu-latest 
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: '3.x'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip 
         pip install -r requirements.txt
-    - name: Fetch data
-      run: python runAll.py
+    - name: Fetch Years
+      id: set-matrix
+      run: python fetchYears.py 
+
+  fetchYearData:
+    needs: fetchYears
+    runs-on: ubuntu-latest 
+    strategy:
+      matrix: ${{fromJson(needs.fetchYears.outputs.matrix)}}
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip 
+        pip install -r requirements.txt
+    - name: Fetch ${{ matrix.years }} data
+      run: python runYear.py ${{ matrix.years }}
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: dist 
+        keep_files: true
+  addMainJson:
+    needs: fetchYearData
+    runs-on: ubuntu-latest 
+    steps:
+    - uses: actions/checkout@v2
+    - name: Checkout gh-pages branch
+      uses: actions/checkout@v2
+      with:
+        ref: gh-pages
+        path: dist
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x' 
+    - name: Update main.json
+      run: python updateMainJson.py
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
