--- a/.github/workflows/fetchAll.yaml
+++ b/.github/workflows/fetchAll.yaml
@@ -7,30 +7,14 @@ on:
   schedule:
     - cron:  '* * 1 * *'
 
-jobs:
-  fetchYears:
-    runs-on: ubuntu-latest 
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip 
-        pip install -r requirements.txt
-    - name: Fetch Years
-      id: set-matrix
-      run: python fetchYears.py 
+jobs: 
 
   fetchYearData:
     needs: fetchYears
     runs-on: ubuntu-latest 
+    if: ${{ always() }}
     strategy:
-      matrix: ${{fromJson(needs.fetchYears.outputs.matrix)}}
+      matrix: [109,105]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
