--- a/.github/workflows/fetchAll.yaml
+++ b/.github/workflows/fetchAll.yaml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest 
     if: ${{ always() }}
     strategy:
-      matrix: [109,105]
+      matrix: ['109','105']
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
