--- a/.github/workflows/fetchCurrent.yaml
+++ b/.github/workflows/fetchCurrent.yaml
@@ -1,15 +1,15 @@
-name: fetchCurrent 
+name: fetchCurrent
 
 on:
   push:
     branches:
       - 蹦蹦
   schedule:
-    - cron:  '* * */1 * *'
+    - cron:  '0 0 */1 * *'
 
 jobs:
   build:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
@@ -18,7 +18,7 @@ jobs:
         python-version: 3.9
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip 
+        python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Fetch data
       run: python run.py
@@ -26,5 +26,5 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: dist 
+        publish_dir: dist
         keep_files: true
