--- a/.github/workflows/fetchCurrent.yaml
+++ b/.github/workflows/fetchCurrent.yaml
@@ -21,7 +21,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Fetch data
-      run: python run.py
+      run: python runCurrent.py
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
