--- a/.github/workflows/fetchCurrent.yaml
+++ b/.github/workflows/fetchCurrent.yaml
@@ -8,7 +8,7 @@ on:
     - cron:  '0 0 */1 * *'
 
 jobs:
-  build:
+  fetch:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
